feat: fetch userId from token.